--- a/EventApplication/Content/bootstrap.css
+++ b/EventApplication/Content/bootstrap.css
@@ -1961,7 +1961,7 @@ pre code {
     width: 41.66666667%;
   }
   .col-md-4 {
-    width: 33.33333333%;
+    width: 33%;
   }
   .col-md-3 {
     width: 25%;
