--- a/EventApplication/Views/Home/Index.cshtml
+++ b/EventApplication/Views/Home/Index.cshtml
@@ -9,9 +9,9 @@
 
 <div class="row">
     <div class="col-md-6">
-        <h2>Event finder here</h2>
+        @Html.ActionLink("Search", "Index", "Events")
     </div>
     <div class="col-md-6">
-        <div class=""button">@Html.ActionLink("Click here to see last minute deals", "FindEvent", "Home")</div>
+        @Html.ActionLink("Click here to see last minute deals", "Index", "Events")
     </div>
 </div>
